--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
@@ -24,6 +25,8 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.3",
     "swiper": "^11.2.4"
