--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.3",
+    "react-select": "^5.10.1",
+    "react-time-picker": "^7.0.0",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
